# LawX-Scraper

./: .env.example  .env.sample  .gitignore  Dockerfile  README.md  app_code_120.py  app_scrapping.bat  docker-compose.yml  instalador.bat  load_env.py  main.py  pyproject.toml  requeriments.txt  resposta.json  scrap.py
bounce/: instalador.bat  install.py
buffer_vetorizado/: buffer_vetorizado.json
config/: docs.json  tribunais.json  valida-campos-api.json
configurações/: cache copy.json  cache.json  categorias.csv  configs.json  configs_backup.json  docs.json  last_update.txt  prompt_categoria.txt  prompt_descricao.txt  resposta.json  status.txt  tipo_doc.json  tribunais.json
docs/: metadata.json
ia_settings/: ia_settings.json
logic_test/: ask.py  resposta.json
simplified_code/: .env.sample  README.md  categorias.csv  docker-compose.yml  main.py  output.txt  pyproject.toml  requeriments.txt  resposta.json  scrap.py
simplified_code/config/: docs.json
simplified_code/docs/: categorias.csv  metadata.json
simplified_code/output/: jurisprudencia_20250922.csv  jurisprudencia_20250923.csv
simplified_code/output/geral/: relatorio_20250925_171921.csv  relatorio_sem_descricao_20250924_173912.csv  relatorio_sem_descricao_20250925_124629.csv
simplified_code/output/justiça/: relatorio_20250925_172412.csv
simplified_code/output/processo_judicial/: relatorio_20250925_172344.csv  relatorio_20250925_172440.csv
simplified_code/prompts/: prompt_categoria.txt  prompt_descricao.txt  prompt_regras_agente.txt
simplified_code/tests/: test_scrap.py
(+13 files in other folders)
