[project]
name = "simplified-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "pinecone>=7.3.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "tensorflow>=2.20.0",
    "unidecode>=1.4.0",
    "python-dotenv>=1.0.0",
    "tf-keras>=2.20.1",
    "openai>=1.109.1",
]
